[package]
name = "pignet"
description = "Netwok crate for use by other crates in the pigg project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[features]
default = []
iroh = ["pigdef/iroh", "dep:iroh", "dep:rand", "dep:rand_core"]
tcp = ["pigdef/tcp"]
discovery = ["pigdef/discovery"]
usb = ["pigdef/usb", "dep:nusb", "dep:tokio", "dep:serde"]

[dependencies]
pigdef = { path = "../pigdef", version = "0.7", default-features = false, features = ["std"] }

postcard = { version = "1.1.3", features = ["alloc"] }
anyhow = "1.0.98"
async-std = "1.13.1"

tokio = { version = "1.47.0", default-features = false, features = ["time"], optional = true }
iroh = { version = "0.90.0", default-features = false, optional = true }
nusb = { version = "0.1.14", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"], optional = true }
rand_core = { version = "0.6.4", optional = true }
