[package]
name = "pignet"
description = "Netwok crate for use by other crates in the pigg project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[features]
default = []
iroh = ["pigdef/iroh", "dep:iroh", "dep:tokio"]
tcp = ["pigdef/tcp"]
discovery = ["pigdef/discovery"]
usb = ["pigdef/usb", "dep:nusb", "dep:tokio", "dep:serde"]

[dependencies]
pigdef = { path = "../pigdef", version = "0.7", default-features = false, features = ["std"] }

postcard = { version = "1.1.3", features = ["alloc"] }
anyhow = "1.0.102"
async-std = "1.13.2"

iroh = { version = "1.0.0-rc.1", default-features = false, features = ["tls-ring"], optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["time"], optional = true }
nusb = { version = "0.2.3", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
