[package]
name = "pigpio"
description = "A crate with GPIO code for use in other pigg project crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
pigdef = { path = "../pigdef" }

serde = { version = "1.0.217", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[target.'cfg(any(all(target_arch = "aarch64", target_os = "linux"), target_arch = "arm"))'.dependencies]
rppal = "0.22.1"
libc = "0.2.169"
