[package]
name = "porky"
version = "0.5.0"
readme = "README.md"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "porky_w"
path = "src/porky_w.rs"
required-features = ["wifi"]

[[bin]]
name = "porky"
path = "src/porky.rs"
required-features = ["usb"]

[features]
default = ["usb", "no_std"]
wifi = ["cyw43", "embassy-net", "tcp", "discovery"]
no_std = []
debug-probe = []
usb = ["embassy-usb"]
discovery = ["edge-mdns", "edge-nal-embassy", "edge-nal"]
tcp = []

[dependencies]
# Embassy Dependencies (crates in https://github.com/embassy-rs/embassy)
embassy-time = { version = "0.3.2", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor = { version = "0.6.0", default-features = false, features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", default-features = false, features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6.0", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }

# Needed even when no wifi - I don't know why yet. Reported to Embassy
cyw43-pio = { version = "0.2.0", default-features = false, features = ["defmt"] }

# Optional Embassy Dependencies
cyw43 = { version = "0.2.0", default-features = false, features = ["defmt"], optional = true }
embassy-net = { version = "0.5.0", default-features = false, features = ["defmt", "tcp", "udp", "dns", "dhcpv4"], optional = true }
embassy-usb = { version = "0.3.0", default-features = false, optional = true }

# Other dependencies (repos in https://github.com/embassy-rs)
ekv = { version = "1.0.0", default-features = false }
static_cell = { version = "2", default-features = false }
portable-atomic = { version = "1.5", default-features = false, features = ["critical-section"] }
embedded-storage = { version = "0.3", default-features = false }

panic-probe = { version = "0.3", default-features = false, features = ["print-defmt"] }
defmt = { version = "0.3", default-features = false }
defmt-rtt = { version = "0.4", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0", default-features = false }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
rand = { version = "0.8.5", default-features = false }
# To convert device_id into hex for use as a string
faster-hex = { version = "0.10.0", default-features = false }

serde = { version = "1.0.208", default-features = false, features = ["derive"] } # no_std
postcard = { version = "1.0.10", default-features = false, features = ["heapless"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }

edge-mdns = { version = "0.3.1", optional = true, features = ["io"] }
edge-nal-embassy = { version = "0.3.0", default-features = false, optional = true }
edge-nal = { version = "0.3.0", default-features = false, optional = true }

[build-dependencies]
# for reading SSID config from a file in build.rs
serde_derive = "~1.0"
serde = "~1.0"
toml = { version = "0.8.8" }

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
strip = "debuginfo"

[patch.crates-io]
# TODO remove this when cyw43 releases with WPA3 support
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

# Optional embassy repos patch
cyw43 = { git = "https://github.com/embassy-rs/embassy.git" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }

edge-mdns = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net.git", branch = "embassy-net-05" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
always_include_features = ["no_std", "wifi"]